2006-08-10  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/SideBar/_PersonSidebarFilter.py (get_filter): Typo.

2006-08-09  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/_HasNoteSubstrBase.py (apply): Enforce unicode.
	* src/Filters/Rules/_HasNoteRegexBase.py (apply): Enforce unicode.
	* src/DataViews/_PlaceView.py: Add filter sidebar.
	* src/FilterEditor/_ShowResults.py: Support media filters.
	* src/FilterEditor/_EditRule.py: Support media filters.
	* src/FilterEditor/_FilterEditor.py: Support media filters.
	* src/Filters/_GenericFilter.py: Support media filters.
	* src/Filters/SideBar/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/Filters/SideBar/__init__.py: Expose new module.
	* src/Filters/SideBar/_MediaSidebarFilter.py: Add module.
	* src/Filters/Rules/Media/Makefile.am (pkgdata_PYTHON): Ship new files.
	* src/Filters/Rules/Media/_HasIdOf.py: Add module.
	* src/Filters/Rules/Media/_HasNoteMatchingSubstringOf.py: Add module.
	* src/Filters/Rules/Media/_HasNoteRegexp.py: Add module.
	* src/Filters/Rules/Media/_MatchesFilter.py: Add module.
	* src/Filters/Rules/Media/_RegExpIdOf.py: Add module.
	* src/Filters/Rules/Media/_MediaPrivate.py: Add module.
	* src/Filters/Rules/Media/__init__.py: Expose new modules.
	* src/Filters/Rules/Media/_AllMedia.py: Add module.
	* src/Filters/Rules/Media/_HasMedia.py: Add module.

	* src/Filters/SideBar/Makefile.am (pkgdatadir): Typo.

2006-08-08  Brian Matherly  <brian@gramps-project.org>
	* src/Config/_GrampsIniKeys.py: Allow multiple functions to use notify_add

2006-08-07  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_RepositoryView.py: Add filter sidebar.
	* src/FilterEditor/_ShowResults.py: Support repo filters.
	* src/FilterEditor/_EditRule.py: Support repo filters.
	* src/FilterEditor/_FilterEditor.py: Support repo filters.
	* src/Filters/_GenericFilter.py: Support repo filters.
	* src/Filters/SideBar/Makefile.am (pkgdata_PYTHON): Ship new file.