@@ -26,7 +26,7 @@
 #
 #-------------------------------------------------------------------------
 from gettext import gettext as _
-import pickle
+import cPickle as pickle
 
 #-------------------------------------------------------------------------
 #
